# Lab5

./: CMakeLists.txt  graphics_controller.cpp  graphics_controller.hpp  graphics_model.cpp  graphics_model.hpp  graphics_page.cpp  graphics_page.hpp  graphics_shapes.cpp  graphics_shapes.hpp  graphics_view.cpp  graphics_view.hpp  main.cpp
.github/workflows/: release.yml
interfaces/: IModel.hpp  IPage.hpp  IView.hpp
